Fix too wide buttons

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -6,6 +6,11 @@
     line-height: 140%;
   }
 
+.button {
+  margin: 30px auto;
+  display: table;
+  }
+
   .post-meta {
     font-size: .875rem;
     color: $global-font-secondary-color;
